@@ -1,12 +1,0 @@
-array_f subscript [3]
-    array_func: str_array_func
-array_f subscript [-3]
-    array_func: str_array_func
-array_f subscript [3.0]
-    array_func: str_array_func
-array_f subscript [ 3]
-    array_func: str_array_func
-array_f subscript [0]
-    array_func: str_array_func
-array_f subscript [-1]
-    array_func: str_array_func
