@@ -1,6 +1,15 @@
+2020-07-12         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (EXTRA_DIST): Remove arrdbug-mpfr.ok and
+	add testext-mpfr.ok.
+	(CHECK_MPFR): Cleaned up.
+	(arrdbg): Adjust the flow.
+	(testext): Ditto.
+	* arrdbg.awk: Update code.
+
 2020-07-08         Arnold D. Robbins     <arnold@skeeve.com>
 
-	* Makefile.am (EXTRADIST): Add additional ok files for MPFR.
+	* Makefile.am (EXTRA_DIST): Add additional ok files for MPFR.
 	(CHECK_MPFR): Add arraytype, arrdbg, forcenum and numrange
 	(arrdbg): Update to check -mpfr.ok file also.
 	* arraytype-mpfr.ok, arrdbg-mpfr.ok, forcenum-mpfr.ok, numrange-mpfr.ok: New files.
